--- a/assets/styles/dashboard.css
+++ b/assets/styles/dashboard.css
@@ -1,12 +1,8 @@
-.bi {
+/*.bi {
   display: inline-block;
   width: 1rem;
   height: 1rem;
 }
-
-/*
- * Sidebar
- */
 
 @media (min-width: 768px) {
   .sidebar .offcanvas-lg {
@@ -31,11 +27,6 @@
 .sidebar-heading {
   font-size: .75rem;
 }
-
-/*
- * Navbar
- */
-
 .navbar-brand {
   padding-top: .75rem;
   padding-bottom: .75rem;
@@ -45,4 +36,31 @@
 
 .navbar .form-control {
   padding: .75rem 1rem;
+}*/
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #0b061f;
+}
+.btn {
+    padding: 20px 80px;
+    background: #7d2ae8;
+    border: 2px solid #fff;
+    outline: none;
+    border-radius: 8px;
+    box-shadow: 0 0 40px #7d2ae8;
+    font-size: 32px;
+    color: #fff;
+    letter-spacing: 1px;
+    cursor: pointer;
 }
