feat : 2eme exemple pour css & javascript avec bootsrap sous symfony.

--- a/templates/base3.html.twig
+++ b/templates/base3.html.twig
@@ -19,6 +19,10 @@
 
 
     <body>
-        <button class="btn">Button</button>
+        <div>
+            <button class="btnRed">Red</button>
+            <button class="btnBlue">Yellow</button>
+            <button class="btn yellow">My Button</button>
+        </div>
     </body>
 </html>
