--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -23,4 +23,28 @@ body {
     color: #fff;
     letter-spacing: 1px;
     cursor: pointer;
+}*/
+
+
+body {
+    text-align: center;
+}
+div {
+    display: inline-block;
+}
+.btnRed, .btnBlue {
+    padding: 5px 10px;
+    margin-top: 10px;
+}
+.btn {
+    padding: 10px 30px;
+    margin-top: 20px;
+    display: block;
+    color: #fff;
+}
+.yellow {
+    background-color: yellow;
+}
+.red {
+    background-color: red;
 }
