--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -46,3 +46,20 @@ box-shadow: inset 1px 0 0 rgba(0, 0, 0, .25);
 .navbar .form-control {
 padding: .75rem 1rem;
 }
+
+
+
+
+/**************************************************************************************************/
+.mybtn {
+    padding: 20px 80px;
+    background: #7d2ae8;
+    border: 2px solid #fff;
+    outline: none;
+    border-radius: 8px;
+    box-shadow: 0 0 40px #7d2ae8;
+    font-size: 32px;
+    color: #fff;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
